Adds reading notes of columns.

--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,23 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-15  我的金钱观
+鲁迅还有一个特点，他一方面拿国民政府的钱，一方面还骂国民政府。鲁迅自己讲，饭碗可以跟理想分开。
+
+  1. 钱是上帝存在你那里的，不是给你的，回头你要还给他。
+  2. 钱只有花出去才是你的。
+  3. 钱和任何东西，都是为了让你生活得更好，而不是给你带来麻烦的。
+  4. 钱是靠挣出来的，不是靠省出来的，而挣钱的效率取决于一个人的气度。
+  5. 钱是花不光的，但是可以迅速投资（投机）投光。
+
+每一个人的能力也有一个极限，在这个极限内努力，效果会比较好，超过这个限度，效率就会大打折扣。
+挣钱也是如此，超过自己能力去挣钱，即便有所收获，各种成本也会太高，并不合算。想清楚这一点，人就能过得比较潇洒。
+
+钱的本质是什么？它实际上是对各种资源的所有权和使用权的量化度量，而资源本身又可以分为自然资源和人的资源。
+如果体会了钱的这种本质，就能体会为什么我说“钱只有花出去才是自己的”。
+当你有效花钱时，就等同于有效地利用了社会资源，而利用了社会资源，就有可能获得更多的钱，这是一个良性循环，这时钱的意义才体现出来。
+
+
 ## 2017-03-14  投资101（7）：补充介绍几个金融常识
 任何国家的股市都不是完美的，正是股市的不可预测性，才给理性的投资人以机会，才将赌徒们淘汰出局。
 任何事情都有一个准入的成本，或者说切换的成本。大到换工作，小到换手机，换电脑，都是如此。
