--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,18 @@
 # 管理篇
 
 
+## 2017-03-17  你敢管理你的老板吗？
+向上管理：
+是一种有趣的说法，其本质是一种影响力，一种更高超的影响力，用来影响那些对你有管理权力的人。
+通用电气的前CEO杰克·韦尔奇，是一位神一样的管理者。
+他的助手罗塞娜·博得斯基做了杰克·韦尔奇14年的助理，她把和老板一起工作的经验写成了一本书，叫《向上管理：做副手的智慧》，提出了“向上管理”（managing up）的概念。
+
+罗塞娜说，我用两小时进行电话沟通、阅读成堆的文件、审核各种陈述材料，就是为了，让杰克只需要用30秒的时间，进行最后的处理。
+然后，继续做其他事情。30秒原则，是你工作到不到位的重要准则。
+
+让老板信任你，你首先要“送”他一个权力：知情权。什么叫知情权？就是主动地汇报自己的工作进展。
+
+
 ## 2017-03-16  悲剧里挖出来的学问
 风险管理：
 风险管理的目标就是要以最小的成本获取最大的安全保障。
