Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,20 @@
 # 管理篇
 
 
+## 2017-03-20  无序邀请无序，混乱引发混乱
+一个秩序的建立非常困难，可是一旦被破坏，将如山崩地裂般，顷刻间灰飞烟灭。
+为什么？这是因为一种叫做“畸形公平”的心理，引发了：破窗效应。
+
+```
+2013年，湖北钟祥发生令人匪疑所思的“家长围攻监考老师”事件。学生高考作弊，被现场抓住。
+然后，我估计你怎么也不会想到，作弊家长们，居然恼羞成怒，开始殴打老师，把54名监考老师逼进了阶梯教室。
+家长们用石头砸破教室的玻璃，然后一边砸着防盗门，一边高喊：我们要公平，不让作弊不公平。
+为什么会这样？钟祥县过去几年高考作弊泛滥，家长们开始砸越来越大的价钱帮子女作弊。
+当作弊已经成为常态，被抓，就是不正常的了。大家都作弊，你凭什么抓我？我投的巨资打了水漂，谁赔给我？不让作弊不公平！还我公平作弊权！
+
+匪夷所思。而这一切，都是从第一扇破窗，也就是第一个作弊没有被抓，却上了好大学的学生开始。
+```
+
 ## 2017-03-17  你敢管理你的老板吗？
 向上管理：
 是一种有趣的说法，其本质是一种影响力，一种更高超的影响力，用来影响那些对你有管理权力的人。
