--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-18  樱花时节
+在日本的文化中，樱花代表美丽而短暂的生命，和武士道的精神是一致的。
+
+
 ## 2017-03-15  我的金钱观
 鲁迅还有一个特点，他一方面拿国民政府的钱，一方面还骂国民政府。鲁迅自己讲，饭碗可以跟理想分开。
 
