--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,14 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-20  究竟是什么在决定你的价格？
+出钱如果是为了情怀，那么我的支付应该被称为捐赠而不是购买。
+
+很早我就知道一切“有趣的人”都是被需要的... 可当我认真问自己，“有必要一定由我去满足这个需求吗？”的时候，得到的答案是，“真的未必”。
+再转念想想，“做一个被认为有趣的人”，和“自己活得有趣”，真的是完全不相干的两件事呢。
+不仅如此，为了做到前者，后者还常常要受到损害，对我来讲，多少有些得不偿失。
+
+
 ## 2017-03-13  为什么你一定要学会写作
 所谓‘普通人’并不是因为起步时普通，而是因为他们‘永远普通地活着’才成了所谓的‘普通人’。
 持续写作很可能是锻炼学习能力、锻炼思考能力、锻炼分析能力、锻炼沟通能力的最直接、最低成本的方式。
