Adds reading notes for columns

--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,13 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-19  竞争不充分的领域里，才有英雄
+这是一个没有英雄，也没有绝招的时代。
+韩非子有句话说：“上古竞于道德，中世逐于智慧，当今争于气力。”
+竞争越充分，个人风格和绝招就越没用。今天的球星出头，靠的是天赋、科学训练、艰苦奋斗和运气 —— 基本上就是在看谁比谁有“气力”。
+你说我能不能诗情画意、羽扇纶巾、姿态优雅地成为世界第一，门儿都没有。这是一个想在任何行业成为高手都先得有*体能*的时代。
+
+
 ## 2017-03-15  老大美国说
 中国一线城市限制人的办法是户口 —— 没有户口你来了也不给你福利，但是至少还让你来，还有工作给你。
 美国没有户口，只要你是美国人，来了就都是平等的，但美国城市限制人的办法是直接限制城市开发 —— 根本没有地方给你，想来也来不了。
