Adds reading notes for columns.

--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -4,6 +4,15 @@
 
 --------------------------------------------------------------------------------
 
+## 2017-03-21  哈佛和斯坦福商学院传授的精髓
+哈佛要培养的是精英，精英和普通人的差别不完全在于知识的多少，而在于智慧和人脉。
+智慧需要和大师们，和高水平的人在一起切磋才能获得。
+人脉更是需要从一个好的同学圈子获得，这样将来你们可以互相提携。
+因此，来上课是成为精英的必由之路。至于考试，反而倒在其次。
+
+为什么从陌生人那里拿钱，要比从老爸那里拿钱重要呢？
+原因很简单，从老爸那里拿钱是在占亲情的便宜，如果一个人习惯于占这种便宜以后，不仅他的谋生，奋斗本领要差很多，而且见识也很难超出上一代人。
+
 
 ## 2017-03-18  樱花时节
 在日本的文化中，樱花代表美丽而短暂的生命，和武士道的精神是一致的。
