--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,15 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-22  有关学校教育的大实话
+学校对学习的作用是安排学习内容、监督学习进度、考核学习水平、交流学习心得。
+学校对社交的作用可能比学习的作用大多了。至于说“学习”这个动作本身，那是你自己的事儿。
+
+从人生哲学角度，我们的确不应该对任何“正规机构”抱太大的希望。
+正规机构处理的是“平均人”，他们最在意的是统计数字，而不是你这个个人。
+人如果不能自立，把身家性命托付给一个外部机构，岂不是有点危险吗？ 
+
+
 ## 2017-03-19  竞争不充分的领域里，才有英雄
 这是一个没有英雄，也没有绝招的时代。
 韩非子有句话说：“上古竞于道德，中世逐于智慧，当今争于气力。”
