Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,28 @@
 # 管理篇
 
 
+## 2017-03-24  只要可能出错，就一定出错
+墨菲定律：
+墨菲是美国爱德华兹空军基地的上尉工程师。1949年，他和他的上司斯塔普少校，在一次火箭减速超重试验中，因仪器失灵发生了事故。
+墨菲发现，测量仪表被一个技术人员装反了。由此，他得出的教训是：如果做某项工作有多种方法，而其中有一种方法将导致事故，那么一定有人会按这种方法去做。
+后来，墨菲的这段话被广泛传播，不断演绎，最终变成了一句大家可能更加熟知的表述：凡事只要有可能出错，那就一定会出错。
+
+
+## 2017-03-22  别把晋升当激励
+彼得原理：
+著名的管理学家劳伦斯·彼得，分析了千百个有关组织中不能胜任的失败实例，
+归纳出彼得原理：在一个等级制度中，每个员工趋向于上升到最终他所不能胜任的职位。
+
+职位，相当于军队的军官系统：军师旅团营连排班；而级别，相当于军队的军衔系统：将、校、尉、士。
+不用更高的职位激励员工，把更高的职位，也就是更大的责任，留给更有能力的员工，而用更高的级别，激励员工向上。
+
+
+## 2017-03-21  “大企业病”有得治吗？
+帕金森定律：
+1958年，英国历史学家、政治学家西里尔·帕金森出版了《帕金森定律》一书。
+他说，组织一旦形成，就会受到“增加下属法则”和“增加工作法则”的影响，开始自我膨胀。
+
+
 ## 2017-03-20  无序邀请无序，混乱引发混乱
 一个秩序的建立非常困难，可是一旦被破坏，将如山崩地裂般，顷刻间灰飞烟灭。
 为什么？这是因为一种叫做“畸形公平”的心理，引发了：破窗效应。
