--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -4,6 +4,13 @@
 
 --------------------------------------------------------------------------------
 
+
+## 2017-03-24  运气的重要性
+在过去45年，美国股市的回报大约是7%（略低于8%的整体历史平均值）。
+但是，如果你错过了股市增长最快的25天，你的投资回报少了一半，只有3.5%，这样45年下来，你的财富积累会少掉80%。
+至于那25天什么时候来，没有人会知道，聪明的投资人，永远在股市上投资，而不是试图投机挑选最低点和最高点。
+
+
 ## 2017-03-21  哈佛和斯坦福商学院传授的精髓
 哈佛要培养的是精英，精英和普通人的差别不完全在于知识的多少，而在于智慧和人脉。
 智慧需要和大师们，和高水平的人在一起切磋才能获得。
