Adds reading notes for columns.

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,16 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-25  欧·亨利：人生是含泪的微笑
+故事：欧·亨利，如何开始写短篇小说的经历
+人生是个含泪的微笑！
+
+
+## 2017-03-24  史泰龙：一千次敲开幸运门
+故事：史泰龙，《洛奇》拍摄经历
+我们有时候不知道，自己是一个齿轮，当齿轮转动时，会带动另一个齿轮，一个又一个齿轮，产生出想象不到的力量。
+
+
 ## 2017-03-09  让鲑鱼回家
 故事：美国华盛顿州艾瓦尔河的鲑鱼逆流产卵
 
