--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,29 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-24  高手修炼手册1：系统、灵感和技能
+Scott Adams 斯科特·亚当斯，呆伯特系列漫画作者。
+
+亚当斯说，如果你想取得出类拔萃的成就，你大概有两个选择。
+第一个选择是你把自己的某个技能练到全世界最好。这个非常困难，极少人能做到。
+第二个选择是，你可以选择两项技能，把每一项技能都练到世界前25%的水平，这就比较容易。
+同时拥有两个能排在前25%的技能的人，其实是很少的，而如果你能把这两个技能结合起来去做一件事，你就可能取得了不起的成就。
+
+所以亚当斯给年轻人的建议是，不管你真正喜欢的领域是什么，你要努力在这个领域练到前25%。
+然后你还得再加一个领域 —— 当然能加两个更好。如果你不知道该加什么领域，亚当斯建议你练演讲。
+亚当斯说，演讲这个东西，只要是个人，愿意苦练，就一定能练好。
+如果你是个 top 25% 的程序员，你们公司有很多也是 top 25%的程序员，但是你同时还是一个 top 25% 的演讲者 —— 那你天然就是其他那些程序员的领导。
+
+浏览信息的过程中，你怎么判断哪条信息值得作为素材呢？亚当斯说，你不应该听从大脑的判断，你应该听从身体的判断。
+可能大脑容易想太多，容易过度拟合，而身体则是自然反应。
+亚当斯总是观察他自己的身体的反应 —— 是不是不由自主地笑了？肾上腺素激增？产生强烈的情感波动？那就说明这个东西一定是个好素材。
+
+首先你得有兴趣，你得能从这个系统本身获得乐趣 —— 可是有兴趣的人太多了。
+每个人都对某一方面的事情感兴趣，但是要真像亚当斯这样做下来，光有兴趣是不够的。
+发展一个系统，不但需要你做“好玩”的事儿，还需要你做很多“不好玩”的事儿。
+“兴趣”，是个被高估了的素质。“气度”，是个被忽略了的素质。不计较得失，心里有一件“大”事
+
+
 ## 2017-03-22  有关学校教育的大实话
 学校对学习的作用是安排学习内容、监督学习进度、考核学习水平、交流学习心得。
 学校对社交的作用可能比学习的作用大多了。至于说“学习”这个动作本身，那是你自己的事儿。
