Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -8,6 +8,12 @@
 # 管理篇
 
 
+## 2017-03-26  向着悬崖狂奔
+战略流程化，流程工具化，管理越来越成熟。
+这既是好事，也是坏事。
+好的地方是，成功被夯实了；坏的地方是，未来被确定了。
+
+
 ## 2017-03-24  只要可能出错，就一定出错
 墨菲定律：
 墨菲是美国爱德华兹空军基地的上尉工程师。1949年，他和他的上司斯塔普少校，在一次火箭减速超重试验中，因仪器失灵发生了事故。
