--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-26  林璎：雕塑是诗，建筑是散文
+故事：越战阵亡将士纪念碑。林璎，林徽因侄女。
+
+
 ## 2017-03-25  欧·亨利：人生是含泪的微笑
 故事：欧·亨利，如何开始写短篇小说的经历
 人生是个含泪的微笑！
