--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,19 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-27  对话毕达哥拉斯
+在古代东方的各个文明中，科学和技术常常被混为一谈，称为科技。
+换句话说，科学依附于实际的应用，它有明确的实用目的，而不是一种独立的，自我占主导的精神规范。
+因此，在东方古老的文明中，科学成就的取得完全来自于经验的积累（比如测量）和偶然的发现，而不是逻辑推理，因此科学发展的速度其实非常慢。
+
+在数学上，毕达哥拉斯认为论证必须从“假设”出发，然后通过演绎推导得出，而不是通过测量和经验得到。
+这种方法不仅对数学的发展影响很大，也让古希腊的科学体系超越了东方工匠式的经验体系。
+
+关于毕达哥拉斯定理的记载都来自于后来的欧几里得。
+据说当毕达哥拉斯证明了这个著名的定理后，学校当时为了庆祝，吃掉了一百头牛。
+因此，勾股定理在西方有时又被戏称为“百牛定理”。
+
+
 ## 2017-03-24  运气的重要性
 在过去45年，美国股市的回报大约是7%（略低于8%的整体历史平均值）。
 但是，如果你错过了股市增长最快的25天，你的投资回报少了一半，只有3.5%，这样45年下来，你的财富积累会少掉80%。
