--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,35 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-27  高手修炼手册2：指挥官的派头
+海军海豹突击队（SEALs）指挥官的杰克·威林克(Jocko Willink)。
+威林克的座右铭是“自律 = 自由”
+你为了获得真正的自由，就非得给自己设定一些限制。
+所谓“真正的自由”，也就是财务自由、时间自由、免于疾病和贫困的自由，为了达到这样的目标你必须自律才行。
+
+威林克说，这个逻辑是这样的。我对我的世界，有极端的所有权。
+如果我的队伍有问题，我自己就会解决，我不会等到这个时候向上级抱怨。
+反过来说，如果哪一天我真的跟上级说，“老板，我需要这个” —— 那我马上就能得到我需要的，因为上级明白，凡是我提出的要求，一定是我真的需要。
+
+这里“谦卑”对应的英文是 humility 和 humble，并不是说对领导毕恭毕敬的意思，而是你这个人听得进去别人的话，有开放的头脑，能时刻学习。
+
+以前我总想，晚睡晚起和早睡早起的实际清醒时间不是一样的吗？早起有什么了不起的呢？
+今天想来，早起的人的确更自律。该睡觉不睡容易，睡得很香到点就起床比较难。
+如果你真的4:45起床，心想别人都还睡着而你已经做了不少工作，可能心理上的确会有一种强烈的胜利感觉。
+所以早睡早起不一定非得是为了养生，也可以是为了自律和荣誉感。
+
+
+## 2017-03-25  东西方对英雄的理解差异
+汉语语境里对英雄的理解，一般是智者为英，勇者为雄。
+一个智勇双全的人，在特殊的时势下，即便最后不成功，也可以被称为英雄。
+
+hero这个词来源于希腊神话，指的是神和凡人的后代，他们都是具有超凡能力的半人半神的存在。
+所以，超人算美国人眼中的英雄。而中国人一般不会把孙悟空和英雄这个词联想到一块，
+
+作者观点：
+英雄就是在更大程度上改变了历史的人吧！ 
+
+
 ## 2017-03-24  高手修炼手册1：系统、灵感和技能
 Scott Adams 斯科特·亚当斯，呆伯特系列漫画作者。
 
