--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-27  关于“选择”的方法论
+在做选择的时候：一定要尽量做到只考虑且不遗漏那些最必要的条件。
+
+
 ## 2017-03-20  究竟是什么在决定你的价格？
 出钱如果是为了情怀，那么我的支付应该被称为捐赠而不是购买。
 
