Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,34 @@
 
 # 管理篇
 
+## 2017-03-29  因为你是微软的，所以减一分
+创业期，是探寻自身行为，和最终结果之间的因果关系的过程，一旦找到，就进入了成熟期。
+那创业期应该怎么管理呢？第一，警惕KPI，第二，管理人心；第三；用成长治愈一切。
+
+
+## 2017-03-28  降一半工资，委以重任，你干吗？
+员工和企业是雇佣关系。但雇佣关系的本质，是某种形式的共同体。
+这种共同体有三种形态：利益共同体，事业共同体，命运共同体。
+
+利益共同体
+我是来赚钱的。我帮公司赚钱，公司给我分钱。但如果我怎么努力，公司也不赚钱，那说明我们不是最合适的利益共同体。
+你另请能帮你赚钱的高明，我也去我的价值能真正兑现成货币的地方。给我涨50%工资，我愿意接受挑战。这叫利益共同体。
+
+事业共同体
+降50%工资，但如果做成，给我500%的收益，我愿意接受挑战。
+
+命运共同体
+降50%工资，你再从家里掏500万现金投进来，如果做成，拿5000%收益，你愿意接受挑战吗？
+如果这你也愿意，说明你敢于把自己的既得利益也赌进去。
+这时候，因为有了共同的不能失去的东西，你们就真正的同生共死，成为了命运共同体。
+
+创业充满了不确定性。这时应该和合伙人保持命运共同体的关系；和高管保持事业共同体的关系，和底层员工保持利益共同体的关系。
+
+
+## 2017-03-27  别把正确的方法，用在了错误的阶段
+跳槽，变成了优秀员工在变革时代的最佳策略。
+那么对于平庸的员工呢？因为对自己没信心，不敢跳槽，他们的最佳策略是：选择慢速、但是保险的升级道路，留在公司。
+
 
 ## 2017-03-26  向着悬崖狂奔
 战略流程化，流程工具化，管理越来越成熟。
