--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,29 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-29  高手修炼手册3：给前辈铺路的人
+一个教练是这么评价贝利奇克的：“你给他一个任务，他消失几个小时，等你再次看到他的时候他已经做完了，然后他向你要更多的任务。”
+
+霍利得（媒体策略师 Ryan Holiday）说，学徒这个工作的逻辑是什么呢？是 —— 
+第一，你根本没有你想象的那么厉害，也没有那么重要；
+第二，你这个不谦虚的态度就不对，你的性格需要磨练；
+第三，你从学校和书本上学到的那些知识，要么过时了，要么根本就是错的，你需要第一线高手的真知灼见。
+给人当学徒，就给你提供了这个机会。你现在把自己和一个高手连接在了一起，你可以从内部了解第一手的经验。
+这就是学徒工作的协议：用礼敬和服务，换取机会 —— 而这个机会还不是立功露脸的机会，而是学习实践的机会。
+
+当你给人铺路的时候，你实际上也在左右他的前进方向。 
+帮助别人就是影响别人，如果你能帮很多人，你本身就是高手，你的影响力就很大，你就能做更大的事 —— 这大概也是气度的力量。 
+
+
+## 2017-03-28  领导力 != 权力
+心理学家说的权力是什么东西。权力，是通过掌握某种资源，而不是通过社交干涉，去控制人。
+而权力的本质 —— 什么叫有权，什么叫没权，在于你能不能控制别人。
+
+说权力的真正作用，是暴露和放大你的品格。
+没有权力的时候，你要更多地依赖别人，那么有些不好的欲望也得忍着，有些好的抱负也不得施展。
+你，不是真实的你。有了权力以后，你更加能够按照自己的意愿行事，你的真实自我才体现出来。
+
+
 ## 2017-03-27  高手修炼手册2：指挥官的派头
 海军海豹突击队（SEALs）指挥官的杰克·威林克(Jocko Willink)。
 威林克的座右铭是“自律 = 自由”
