Adds reading notes for columns

--- a/note/...book_principles.md
+++ b/note/...book_principles.md
@@ -145,13 +145,16 @@ __To Get the People Right...__
   100. Evaluate People Accurately, Not “Kindly”
   117. Train and Test People Through Experiences
   128. Sort People into Other Jobs at Bridgewater, or Remove Them from Bridgewater
+
+__To Perceive, Diagnose, and Solve Problems...__  
+
   133. Know How to Perceive Problems Effectively
   147. Diagnose to Understand What the Problems Are Symptomatic Of
   163. Put Things in Perspective
   166. Design Your Machine to Achieve Your Goals
   188. Do What You Set Out to Do
 
-__To Make Decisions E ectively...__  
+__To Make Decisions Effectively...__  
 
   190. Recognize the Power of Knowing How to Deal with Not Knowing
   196. Make All Decisions Logically, as Expected Value Calculations
