--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,12 @@
 
 # 管理篇
 
+
+## 2017-03-31  如何做个理性明白人？
+经济学帝国主义，就是把经济学的基本原理和分析方法，运用到其他社会科学研究的领域中去的信念和做法。
+到目前为止，已经没有哪个社会科学是不被经济学入侵的了，尤其包括政治学、法学和社会学。
+
+
 ## 2017-03-29  因为你是微软的，所以减一分
 创业期，是探寻自身行为，和最终结果之间的因果关系的过程，一旦找到，就进入了成熟期。
 那创业期应该怎么管理呢？第一，警惕KPI，第二，管理人心；第三；用成长治愈一切。
