--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,18 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-03  找一个长期对你好的人，从巴菲特购买苹果股票说起
+我们在一生中，遇到的人要比股市上的股票多得多，大部分人哪怕再好，你再喜欢，如果不能长期对你好，其实对你一生的帮助并不大。
+用巴菲特的方法了解一个人，长期结交一个人，我们会终身受益。
+
+
+## 2017-03-30  对话庄子：梦蝶
+笛卡尔非常喜欢思考，又一直身体不好，于是在病床上有很多时间思考问题。
+他有句名言“我思故我在（拉丁语：Cogito ergo sum）”。很多人把它简单地理解为思考使我们变得理性而睿智，这有点片面。
+“思”的含义并不完全是思考。这句话更深层的含义是，我们有思维的活动，让我们能够证明我们的存在。
+这句话的逆否命题是“如果我不存在了，就不会思考的”。也就是说，如果我们的生命终结了，意识是不可能存在的。
+
+
 ## 2017-03-27  对话毕达哥拉斯
 在古代东方的各个文明中，科学和技术常常被混为一谈，称为科技。
 换句话说，科学依附于实际的应用，它有明确的实用目的，而不是一种独立的，自我占主导的精神规范。
@@ -182,6 +194,51 @@
 
 很多第三世界国家用米格-25进行空战，效果不佳应该是意料之中的事情。
 伊拉克曾经用这样高速的飞机去打美国时速只有0.15马赫的无人侦察机，效果可想有多差，这并非米格-25的问题，而是使用它的人食古不化，用错了工具。
+
+
+## 2017-01-28  古典来信 | 你的生命有什么可能？
+“生涯”这个词其实是舶来词，英文对应“Career”，Career并不是仅仅指“职业生涯”，
+从时间维度，他包括了职业前的家庭教育、高考选专业、职业素质的发展、选择职业、发现优势、自我实现，
+也包括了退休后的转型、银发人生的重新设计、甚至到面对死亡。它其实来自拉丁文词根“Car”运输，运送。
+比如运输叫做 Carry，货物叫做 Cargo，四轮马车叫做 Carriage。
+
+Career 的原意则是车辙，车轮压出来的痕迹——有过农村生活体验的人应该知道，土路上会留下很多车辙。
+一旦你选择一条路，这条路就会带你去很多地方。初、高中同学聚会，时间越远，差异越大，则是因为当时大家虽然在一个车站出发，却选择了不同的路。
+而四五十年后的同学聚会（比如你父母参加的那些）则又越来越相同，因为他们最后又会慢慢回到同一个车站——面对死亡。
+
+中文翻译的“生涯”来自于庄子的“吾生也有涯”，它翻译出了人生的真实意蕴。
+因为有了“涯”，也就是边界，生命本身变得有了限制，因为有了限制，我们才开始思考什么是重要的，什么是不重要的，
+有了好坏，有了意义，有了思考，有了自我意识。正是因为有了“涯”的限制，“生”才变得有意义。
+
+从生涯的角度来看，人生有很多维度，至少 4 个——高度、宽度、深度以及温度。
+比如说一个再普通不过的软件工程师，他的生命有什么可能呢？
+
+从 __高度__ 来看，他可能成为公司的高管、负责人，可以自己创业，可以做投资人，也可以做改变一个行业、甚至一个时代的人；
+从 __深度__ 来看，软件、算法是一件可以穷尽一生去琢磨的事，又或者不钻研主业，而是在某一个领域钻研，总之做一件把人类集体认知向前推进一点点的事；
+从 __宽度__ 来看，他不仅仅是职业人，他还是妻子的丈夫、儿女的父亲、父母的孩子、还是哥们的朋友、可以是个有责任感的公民，还可以是个善良温和的陌生人；
+从 __温度__ 来看，他可以快乐地做、忧郁地做、背负着责任去做、他可以用不同的温度和状态做，他可以用不同的内在状态和世界互动。
+
+不管你有没有意识到，每个人的兴趣、天赋和资源在这四个维度是分布不均匀的，每个人的机会也各有不同，
+这些内心选择和机会一次次地交互，最终形成了每个人在生涯四度上不同的选择，也构成了每一个生命不同的形状和姿态。
+
+你可以试试看高度，高度背后的价值观是影响力与权力。
+生涯高度的追寻者，他们热爱竞争，有感召力与影响力，渴望资源与平台，希望自己有朝一日用自己的方式改变世界。
+大部分的领袖、政治家、企业家、帝王都是生涯高度的追寻者。
+
+深度也是一条自我发展之路，他的背后价值观是卓越与智慧。生涯深度指的是人们在思想、智慧、艺术与体能上达到的卓越与精进程度。
+专业主义、匠人精神、科学精神、追求卓越……这些都是生涯深度的探索者
+
+宽度更是美，他是人类发展的根源价值观：爱与和谐。
+生涯宽度是指我们能打开、丰富和平衡好人生多少个不同角色的程度。孩子、父母、亲戚、朋友、职业人、公民……
+
+还有就是温度。人生温度背后的价值观是自由与精彩。生涯温度是指我们的生命的精彩程度，以及我们内心有多认同和热爱自己的生活。
+这个维度是唯一一个完全内在的维度——高度有权力评定、深度有学术头衔、宽度有身边人反馈、而温度则只有你自己知道。
+
+每个人的兴趣、天赋、资源和机缘各自不同，结合内心的选择，就变成了各自不同的人生状态。
+就如设计一样，每个人起点、终点都不同，选择也不一样，几个维度也没有好坏，如果一定要个好坏标准，只有两个：
+
+  1. 你有多努力地尝试理解和设计自己的生活？——这是你的自由意志。
+  2. 你有多投入和多努力完成你的人生设计？——这是你的自我价值。
 
 
 ## Legacy
