--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,14 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-03-31  高手修炼手册4：风险投资人的养成
+如果你发现一个投资人在纠结地翻来覆去看你的数据，他其实不是在那里做计算，而是他想在这些数据里面找到相信你这个故事的理由。 
+
+另一个风险投资人，马克·安德森（Marc Andreessen），就非要和巴菲特反着投资，他不相信巴菲特的方向。
+安德森说，你一定得有一个强烈的观点，然后你还得有放弃这个观点的勇气。
+有强烈的观点，你才能下水去做这件事。可是一旦现实告诉你这个强烈的观点是错误的，你还得能马上调整，而不是固执己见。
+
+
 ## 2017-03-29  高手修炼手册3：给前辈铺路的人
 一个教练是这么评价贝利奇克的：“你给他一个任务，他消失几个小时，等你再次看到他的时候他已经做完了，然后他向你要更多的任务。”
 
