Adds reading notes for poem and book.

--- a/note/...book_principles.md
+++ b/note/...book_principles.md
@@ -131,32 +131,90 @@ The Group's values and ways of being, it's _culture_.
 ### Summary and Table of Principles
 __To Get the Culture Right...__  
 
-  1.   Trust in Truth
-  8.   Create a Culture in Which It Is OK to Make Mistakes but Unacceptable Not to Identify, Analyze, and Learn From Them
-  20.  Constantly Get in Synch
+  - 1) Trust in Truth
+
+  - 8) Create a Culture in Which It Is OK to Make Mistakes but Unacceptable Not to Identify, Analyze, and Learn From Them
+
+  - 20)  Constantly Get in Synch
+    - 27) Know when to stop debating and move on to agreeing about what should be done.
+          I have seen people who agree on the major issues waste hours arguing over details. It’s more important to do big things well than to do small things perfectly.
+    - 29) Evaluate whether an issue calls for debate, discussion, or teaching.
+          Debate, discussion, and teaching are all ways of getting in synch, but they work differently and the approach you choose should reflect your goal and the relative believability of the people involved.
+          * Debate is generally among approximate equals;
+          * discussion is open-minded exploration among people of various levels of understanding;
+          * teaching is between people of different levels of understanding.
+    - 30) Don’t treat all opinions as equally valuable.
+          Almost everyone has an opinion, but many are worthless or harmful. The views of people without track records are not equal to the views of people with strong track records.
+    - 31) Consider your own and others’ “believabilities.”
+          Ask yourself whether you have earned the right to have an opinion. As a general rule, if you have a demonstrated track record, then you can have an opinion of how to do it — if you don’t, you can’t, though you can have theories and questions.
+    - 33) If it is your meeting to run, manage the conversation.
+          Navigate the levels of the conversation clearly. When considering an issue or situation, there should be two levels of discussion: the case at hand and the relevant principles that help you decide how the machine should work.
 
 __To Get the People Right...__  
 
-  37.  Recognize the Most Important Decisions You Make Are Who You Choose to Be Your Responsible Party
-  44.  Recognize that People Are Built Very Differently
-  52.  Hire Right, Because the Penalties of Hiring Wrong Are Huge
-  64.  Manage as Someone Who Is Designing and Operating a Machine to Achieve the Goal
-  90.  Probe Deep and Hard to Learn What to Expect from Your “Machine”
-  100. Evaluate People Accurately, Not “Kindly”
-  117. Train and Test People Through Experiences
-  128. Sort People into Other Jobs at Bridgewater, or Remove Them from Bridgewater
+  - 37) Recognize the Most Important Decisions You Make Are Who You Choose to Be Your Responsible Party
+
+  - 44) Recognize that People Are Built Very Differently
+    - 45) Think about their very different values, abilities, and skills.
+          * Values are the deep-seated beliefs that motivate behaviors;
+          * Abilities are ways of thinking and behaving.
+          * Skills are learned tools, such as being able to speak a foreign language or write computer code.
+          In picking people for long-term relationships, values are most important, abilities come next, and skills are the least important.
+    - 47) Recognize that the type of person you fit in the job must match the requirements for that job.
+          The most able learners are easily found, since they are, or were, the best students from the best schools. The best thinkers are tougher to find, as there are no obvious funnels through which they pass, especially before they develop track records in the “real world.”
+
+  - 52) Hire Right, Because the Penalties of Hiring Wrong Are Huge
+    - 56) Select the appropriate people and tests for assessing each of these qualities and compare the results of those assessments to what you’ve decided is needed for the job.
+          Remember that people tend to pick people like themselves, so pick interviewers who can identify what you are looking for. For example, if you’re looking for a visionary, pick a visionary to do the interview where you test for vision. If there is a mix of qualities you’re looking for, put together a group of interviewers who embody all of these qualities collectively.
+    - 57) Look for people who have lots of great questions.
+    - 59) Don’t hire people just to fit the first job they will do at Bridgewater; _hire people you want to share your life with_. The best relationships are long-term and based on shared missions and values.
+
+  - 64) Manage as Someone Who Is Designing and Operating a Machine to Achieve the Goal
+    - 65) Understand the differences between managing, micromanaging, and not managing.
+          Micromanaging is telling the people who work for you exactly what tasks to do and/or doing their tasks for them. Not managing is having them do their jobs without your oversight and involvement.
+          Managing means:
+          1) understanding how well your people and designs are operating to achieve your goals
+          2) constantly improving them.
+    - 69) Conduct the discussion at two levels when a problem occurs:
+          1) the “machine” level discussion of why the machine produced that outcome
+          2) the “case at hand” discussion of what to do now about the problem.
+    - 81) Avoid staying too distant.
+          You need to know your people extremely well, provide and receive regular feedback, and have quality discussions. Your job design needs to build in the time to do these things.
+
+  - 90) Probe Deep and Hard to Learn What to Expect from Your “Machine”
+
+  - 100) Evaluate People Accurately, Not “Kindly”
+    - 108) Recognize that your evolution at Bridgewater should be relatively rapid and a natural consequence of discovering your strengths and weaknesses; as a result, your career path is not planned at the outset.
+          Your career path isn’t planned because the evolutionary process is about discovering your likes and dislikes as well as your strengths and weaknesses. The best career path for anyone is based on this information. In other words, each person’s career direction will evolve differently based on what we all learn.
+
+  - 117) Train and Test People Through Experiences
+  - 128) Sort People into Other Jobs at Bridgewater, or Remove Them from Bridgewater
 
 __To Perceive, Diagnose, and Solve Problems...__  
 
-  133. Know How to Perceive Problems Effectively
-  147. Diagnose to Understand What the Problems Are Symptomatic Of
-  163. Put Things in Perspective
-  166. Design Your Machine to Achieve Your Goals
-  188. Do What You Set Out to Do
+  - 133) Know How to Perceive Problems Effectively
+    - 142) Don’t use the anonymous “we” and “they,” because that masks personal responsibility  use specific names.
+
+  - 147) Diagnose to Understand What the Problems Are Symptomatic Of
+  - 163) Put Things in Perspective
+
+  - 166) Design Your Machine to Achieve Your Goals
+    - 175) Build your organization from the top down.
+           The people at the top of each pyramid should have the skills and focus to manage their direct reports and a deep understanding of their jobs.
+    - 184) Tool: Use checklists.
+           Use “double-do” rather than “double-check” to make sure mission-critical tasks are done correctly.
+
+  - 188) Do What You Set Out to Do
 
 __To Make Decisions Effectively...__  
 
-  190. Recognize the Power of Knowing How to Deal with Not Knowing
-  196. Make All Decisions Logically, as Expected Value Calculations
-  198. Remember the 80/20 Rule, and Know What the Key 20% Is
-  205. Synthesize
+  - 190) Recognize the Power of Knowing How to Deal with Not Knowing
+
+  - 196) Make All Decisions Logically, as Expected Value Calculations
+    - 197) Don’t bet too much on anything. Make 15 or more good, uncorrelated bets.
+
+  - 198) Remember the 80/20 Rule, and Know What the Key 20% Is
+    -  199) Distinguish the important things from the unimportant things and deal with the important things first.
+            Since 80% of the juice can be gotten with the first 20% of the squeezing, there are relatively few (typically less than five) important things to consider in making a decision.
+
+  - 205) Synthesize
