--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -17,6 +17,10 @@
 
 
 ## 其他
+一封朝奏九重天，夕贬潮州路八千。欲为圣朝除弊事，肯将衰朽惜残年？
+云横秦岭家何在？雪拥蓝关马不前！知汝远来应有意，好收吾骨瘴江边。
+    -- 韩愈《左迁至蓝关示侄孙湘》
+
 骚人昨夜闻啼鸟，不叹流年惜众芳。
     -- 刘禹锡《窦朗州见示与澧州元朗中早秋赠作命同答》
 
