Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -5,8 +5,26 @@
 --------------------------------------------------------------------------------
 
 
-# 管理篇
+# 个人篇
 
+
+## 2017-04-05  别把追求成功的梯子，搭错了墙
+怎么才能以终为始，成为自己的第一次创造者？要注意三件事：目标、原则和计划。
+
+
+## 2017-04-04  别让消极，把你拉入海底
+你关心健康、事业、甚至世界局势，这是“关注圈”。但关注圈中有些事，是你无法影响的，比如谁当选美国总统。
+关注圈中，那些你可以影响和控制的小圈，叫做“影响圈”。
+
+第一，在刺激和回应之间，给自己思考的时间；
+第二，用积极的语言，替代消极的语言；
+第三，减小关注圈，扩大影响圈。
+
+
+--------------------------------------------------------------------------------
+
+
+# 管理篇
 
 ## 2017-03-31  如何做个理性明白人？
 经济学帝国主义，就是把经济学的基本原理和分析方法，运用到其他社会科学研究的领域中去的信念和做法。
