--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,19 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-04  人生最重要的投资
+我想和大家分享的第一个观点是“聪明人会欣赏聪明人，而且只有聪明人才会欣赏聪明人”。
+这是一个相当有智慧的人告诉我的，我观察周围人20多年，证实这句话是对的。
+对男生来讲，特别是聪明的男生，他打动一个“漂亮而且聪明”的女生，要比打动一个“漂亮但不聪明”的女生要容易得多！
+虽然中国人觉得郎才女貌才相配，但是一个漂亮的笨女生是很难喜欢上一个真正的才子的。
+
+容貌靠遗传，而魅力则靠培养。我们常说“大家闺秀”，其实就是指她们从小受到很好的培养，才有了一般人所不具备的迷人之处。
+脱不花（罗辑思维CEO）讲过，想了解一个女生20年后的样子，看看她的母亲就知道了。
+当然时代在进步，一代人更比上一代强，孩子通常会比父母优秀，但是家庭和周围环境对人的影响常常是深远的。
+
+在一个完美的婚姻中，双方都要明白关系的亲密程度和重要性依次是“夫妻 > 子女 > 双方父母”。
+
+
 ## 2017-04-03  找一个长期对你好的人，从巴菲特购买苹果股票说起
 我们在一生中，遇到的人要比股市上的股票多得多，大部分人哪怕再好，你再喜欢，如果不能长期对你好，其实对你一生的帮助并不大。
 用巴菲特的方法了解一个人，长期结交一个人，我们会终身受益。
