--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-03  关于创业的选择
+比如我们之前说过的写作。对于个人而言，这可能是为数不多的必然有“成长率”的事情。
+因为随着写作的深入，你能获得的回报将远远超过写作本身。
+比如你因为写作锻炼出来的分析问题的能力，因为搜集素材锻炼出的观察的能力，因为记录而深入思考的能力等等。
+
+
 ## 2017-03-27  关于“选择”的方法论
 在做选择的时候：一定要尽量做到只考虑且不遗漏那些最必要的条件。
 
