Adds reading notes

--- a/note/...book_黑客与画家.md
+++ b/note/...book_黑客与画家.md
@@ -110,6 +110,73 @@
 创业的付出和回报虽然总体上是成比例的，但是在个体上是不成比例的。
 
 
+## 9. 设计者的品味
+喜欢一件东西，却不知道为什么自己喜欢它，原因可能是这件东西是美的，但也可能因为他们的母亲也拥有同样的东西，
+或者杂志上某个明星使用它，或者仅仅因为它的价格很昂贵。人类的思想就是没有经过整理的无数杂念的混合。
+
+- 好设计是简单的设计
+  数学中，简短的证明往往是更好的证明；
+  编程中，也适用（更少且更优雅的代码）；
+  设计中，意味着美依赖一些精心选择的结构性元素；
+  写作中，这种说法意味着只说必须要说的话，并且说得简短；
+  当你被迫把东西做得简单时，你就被迫直接面对真正的问题。当你不能用表面的装饰交差时，你就不得不做好真正的本质部分。
+
+- 好设计是永不过时的设计
+  以永不过时作为目标是一种帮助自己找到最佳答案的方法：如果你不愿别人的答案取代你的答案，你就只好自己做出最佳答案。
+  某些大师的作品太过杰出，永不过时，使得后人几乎难以在该领域立足。自从 16 世纪出现了德国雕刻大师丢勒，
+  后世的雕刻家都因为自己的作品被拿来与他的作品比较而苦不堪言。
+  “风潮”这个词，从字面上就可以看出，它就是一阵风似的，随着时间经常改变。
+  如果你希望自己的作品对未来的人们有吸引力，方法之一就是能让你的作品对上几代人有吸引力。
+  我们很难猜想未来是什么样子，但是可以肯定，未来的人们不会在乎今天流行的风潮，这一点与上几代人是相同的。
+  所以，如果你的作品对今天的人们以及 1500 年的人都有吸引力，那么它极有可能也会吸引 2500 年的人。
+
+- 好设计是解决主要问题的设计
+
+- 好设计是启发性的设计
+  绘画作品也分为描述性绘画和启发性绘画，后者往往比前者更引人入胜。每个人看到《蒙娜丽莎》都有自己的理解。
+  在科学领域中，总体上可以把引用次数看作对他人启发性大小的粗略指标。
+
+- 好设计通常是有点趣味性的设计
+  因为幽默一定程度上反映了力量。幽默感是强壮的一种表示，始终拥有幽默感就代表你对厄运一笑了之，
+  而丧失幽默感则表示你被厄运深深伤到。所以强壮的标志就是轻松面对自己的人生。
+  充满自信的人常常像燕子一样，以一种居高临下的姿态轻盈地看待周围的一切。
+
+- 好设计是艰苦的设计
+  并非所有的痛苦都是有益的。世界上有有益的痛苦，也有无益的痛苦。
+  你需要的是咬牙向前冲刺的痛苦，而不是脚被钉子扎破的痛苦。
+  解决难题的痛苦对设计师有好处，但是对付挑剔的客户的痛苦或者对付质量低劣的建材的痛苦就是另外一回事了。
+
+- 好设计是看似容易的设计
+  优秀的运动员比赛时，让人觉得他轻轻松松就获胜了，优秀设计师也是如此，他们的工作看上去很容易。
+  大多数时候，这是一种错觉。作家的文章读起来流畅自如，但是背后其实经过了反复修改。
+  在大多数领域，看上去容易的事情，背后都需要大量的练习。练习的作用也许是训练你把刻意为之的事情变成一种自觉的行为。
+  人们有时会说自己有了“状态”，我的理解是，他们这时可以控制自己的脊髓。脊髓是更本能的反应，面对难题时，它能释放你的直觉。
+  > 从生理上解释了，什么叫“有状态”
+
+- 好设计是对称的设计
+
+- 好设计是模仿大自然的设计
+  不是说模仿大自然这种行为本身有多么好，而是说大自然在长期演化中已经解决了很多设计问题。
+  所以，如果你的设计与大自然很接近，那么它基本上不会很差。
+
+- 好设计是一种再设计
+
+- 好设计是能够复制的设计
+  刚入门的新手不知不觉地模仿他人，逐渐熟练之后才开始创作原创性作品。
+  最后他会意识到，把事情做对比原创更重要。
+
+- 好设计是奇特的设计
+  我在前文提到的好设计的大多数特点都是可以培育出来的，但是我觉得“奇特”这个特点是无法培育的。
+  你最多就是在它开始显现时不要把它扼杀掉。爱因斯坦并不想让相对论变得很奇特，他只想找出真理，是真理本身显得很奇特。
+  唯一达到“奇特”的方法，就是追求做出好作品，完成之后再回过头看。
+
+- 好设计是成批出现的
+  推动人才成批涌现的最大因素就是，让有天赋的人聚在一起，共同解决某个难题。互相激励比天赋更重要。
+
+- 好设计常常是大胆的设计
+  优秀作品的秘诀就是：非常严格的品味，再加上实现这种品味的能力。
+
+
 ## 10. 编程语言解析
 所有机器都有一张操作命令清单，这种操作命令的总和就是计算机的机器语言。
 汇编语言相比机器语言就是换了一个更人性化的名字。
