--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,9 @@
 
 # 个人篇
 
+## 2017-04-08  用于迎来了“个人篇”
+学会一个知识可能需要4天时间，习得一项技能可能要4个月，改变一个态度却可能需要4年、40年，由此可见，它对一个人影响之大，改变之困难。
+
 
 ## 2017-04-05  别把追求成功的梯子，搭错了墙
 怎么才能以终为始，成为自己的第一次创造者？要注意三件事：目标、原则和计划。
