--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-09  聪明人也会做蠢事
+故事：培根，死的很蠢
+读史使人明智，读诗使人灵秀，数学使人周密，科学使人深刻，伦理使人庄重，逻辑修辞使人善辩。凡有所学，皆成性格。
+
+
 ## 2017-03-26  林璎：雕塑是诗，建筑是散文
 故事：越战阵亡将士纪念碑。林璎，林徽因侄女。
 
