--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-10  未来商业的特点：共享经济
+共享经济的本质是让更多的资源加入到经济活动中，利用新技术提高效率，带来方便，最终让大家多花钱，只有按照这个思路从事共享经济才能成功。
+商业的本质是为了让人多花钱，而不是省钱。如果共享经济带来的结果是大家都不去买东西，那么经济一定是萎缩的，这样的生意就发展不起来了。
+
+
 ## 2017-04-04  人生最重要的投资
 我想和大家分享的第一个观点是“聪明人会欣赏聪明人，而且只有聪明人才会欣赏聪明人”。
 这是一个相当有智慧的人告诉我的，我观察周围人20多年，证实这句话是对的。
