--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,27 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-11  专家的五重境界
+第一级是新手。
+新手能记住抽象的规则，然后按照规则行事。
+
+第二级是先进的初学者。
+先进的初学者不但能按规则行事，而且能够根据以往的经验，面对不同的局面能采取不同的行动。
+新手只会规则告诉他的那几招，而先进的初学者除了规则还有经验，他可以在一定程度上，对不同环境随机应变。
+
+第三级是胜任。
+胜任者面对几个事情，能够分出优先级。也就是说，在做决策的时候，他清楚地知道，首先应该照顾什么地方，其次应该做什么事。
+能分清什么重要，什么不重要。他有时候按照固定规则去做事，有时候则是依据以往的经验。
+
+第四级是精通。
+精通者能够把所有的信息当做一个整体来考虑。
+精通者考虑问题，很少理性地使用固定的规则，他已经不再区分经验和规则，而是从整体出发，全盘考虑。
+
+第五级是专业。
+专业者完全不受理性的束缚，他的判断和反应都是在无意识的情况下做出的。
+哪怕面对的是全新的情况，他也能无意识地把这个情况和以前的经验联系在一起，自动处理。
+
+
 ## 2017-03-31  高手修炼手册4：风险投资人的养成
 如果你发现一个投资人在纠结地翻来覆去看你的数据，他其实不是在那里做计算，而是他想在这些数据里面找到相信你这个故事的理由。 
 
