--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-10  提高成长率的方法论
+在所谓“生意”这件事儿上：成长率 > 成长 > 赚钱 > 谋生
+概念与关联，是操作系统的基本核心，随之产生的是价值观与方法论。
+价值观决定你的选择，而方法论告诉你应该怎么做。
+
+
 ## 2017-04-03  关于创业的选择
 比如我们之前说过的写作。对于个人而言，这可能是为数不多的必然有“成长率”的事情。
 因为随着写作的深入，你能获得的回报将远远超过写作本身。
