--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -17,6 +17,9 @@
 
 
 ## 其他
+论旧举杯先下泪，伤离临水更登楼。相思前路几回首，满眼青山过卫州。
+    -- 杨巨源《送人过卫州》
+
 一封朝奏九重天，夕贬潮州路八千。欲为圣朝除弊事，肯将衰朽惜残年？
 云横秦岭家何在？雪拥蓝关马不前！知汝远来应有意，好收吾骨瘴江边。
     -- 韩愈《左迁至蓝关示侄孙湘》
