Adds reading notes.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,19 @@
 
 # 个人篇
 
+## 2017-04-12  把优秀，变成一种习惯
+你能给予什么样的价值，就会认识什么样的人。如果不能用价值浇灌人脉，那就只能用人品抵押。
+抵押到最后还不起了，你还想借，就会破产。人脉，不是那些能帮到你的人，而是那些你能帮到的人。
+所以，持续的给予价值。这是更新、积累人脉的唯一方法。给予，减去索取，等于人脉；付出，减去回报，等于胸怀。
+
+
+## 2017-04-10  先理解别人，再被别人理解
+据专家估计，人际沟通仅有7％通过语言来进行，38％取决于语调与声音，其余55％则得靠肢体语言。
+所以，有时基于微信的文字沟通是不够的，还要语音；语音沟通也是不够的，还要视频；视频沟通也是不够的，还要见面。
+
+第一，戒掉“自传式回应”；第二，用耳朵听，用眼睛看，用心理解；第三，移情聆听。
+
+
 ## 2017-04-08  用于迎来了“个人篇”
 学会一个知识可能需要4天时间，习得一项技能可能要4个月，改变一个态度却可能需要4年、40年，由此可见，它对一个人影响之大，改变之困难。
 
