--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,34 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-14  打破“定论”更难
+故事：巴里·马歇尔发现幽门杆菌
+拿一个广口瓶，瓶底向着阳光，瓶中放入蜜蜂，它会往阳光飞去，但会撞到瓶底，一撞再撞，因为在自然界没有“透明的墙”。
+玻璃是人造的，蜜蜂的经验里没这个东西，所以它会一直撞到死。
+但是如果你放的是苍蝇，苍蝇也会先撞到玻璃，撞几次以后，它会往不同的方向乱飞，飞几次就能飞出瓶口，得到自由。
+
+蜜蜂虽比苍蝇智力高，但它以过去的经验，一定要向阳光飞，它知道自然界没有透明的墙，所以反而一直去撞瓶底。
+结果苍蝇因为无知，反而没有被知识所限。人类无法接受创新的概念和新事物，这并不仅限于无知的人。
+常常是最有知识的人，才更受限于既有的知识。旧的知识会像黑眼罩，罩住他们的眼，使他们看不见新发现。
+旧的知识会像水泥，灌进他们的脑，使他们思考僵固，排斥所有新想法。 
+
+
+## 2017-04-13  为孩子而战
+故事：杰米·奥利弗，英国有名的主厨，十五餐厅，提高学校午餐标准
+树大必有枯枝，人多必有白痴。
+
+
+## 2017-04-11  威权背后的人性光辉
+故事：美国社会心理学家斯坦利·米尔格拉姆，电击实验
+利用所谓“合法的权力”，可以轻易胁迫人去做他本来不想做的事。
+还有，我们如果是受命行事，以为责任是上面的，自己不是主导者，就可以把责任移转出去，不用负责，那更会乖乖服从。 
+
+人类社会的创新前进或是反抗不公不义，需要有像甘地、孙中山、马丁·路德·金、曼德拉这样第一个发出声音、开始行动、带领革命的先行者。
+有先知，其他人也会觉醒过来。有先行，其他人也会跟着行动。
+
+在人性的黑暗面中，只要有人点亮第一支火把，就有机会重现光明。
+
+
 ## 2017-04-09  聪明人也会做蠢事
 故事：培根，死的很蠢
 读史使人明智，读诗使人灵秀，数学使人周密，科学使人深刻，伦理使人庄重，逻辑修辞使人善辩。凡有所学，皆成性格。
