--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,7 +5,39 @@
 --------------------------------------------------------------------------------
 
 
-## 2017-04-11  专家的五重境界
+## 2017-04-15  意会工具箱里的六种武器
+社会学家尼克拉斯·卢曼（Niklas Luhmann）有个理论说，每一个专业的专业人士，看一个什么系统，都爱用一个二分法的眼光去看。
+比如说，律师看什么东西都是“合法”和“不合法”。商人看什么东西都是“盈利”和“不盈利”。记者看，那就是“有故事”和“没有故事”。
+
+
+## 2017-04-12  索罗斯的见识
+哲学家把知识分为了四种。
+
+第一种叫“客观知识”。
+光速是多少，12+12等于几，这些知识就是客观知识。一切自然科学，都是客观知识。
+
+第二种叫“主观知识”。
+你说你饿了，你说你脖子疼，这就是一个主观知识。
+主观知识，就是个人的各种感受。感受本质上就是很难测量的，其实你也很难说清你到底“饿”到了什么程度。
+
+第三种叫“共享知识”。
+共享知识是一群人共享的主观知识，比如说文化和公共情绪。德国人惧怕通货膨胀，这就是一个共享知识。
+文化和情绪是无法量化测量的，但是真实存在，而且还可能根据不同情况变化。捕捉这样的知识，你必须“理解”。
+
+第四种叫“感觉知识”。
+感觉知识说的是专家对所在环境、对各种数据的一种直观感受，一种直觉反应。
+比如一个特别有经验的交易员能“感觉到”今天的市场有问题。这种感觉其实是人脑对大量信息综合处理之后的一种反应
+
+好像打高尔夫球一样。不怎么会打的时候，你看不出来顶尖高手到底厉害在哪。
+等到你的水平越接近顶尖高手，你就越觉得顶尖高手高不可攀
+
+
+## 2017-04-11  知道是什么，知道该怎么，和知道为什么
+是什么、该怎么、为什么，算法只知道该怎么。能把三个问题合在一起全盘考虑的，目前只有人类。 
+现在所谓的“深度学习”算法，没有任何理解能力，没有任何解释能力，更不用说什么新发现的能力。
+
+
+## 2017-04-10  专家的五重境界
 第一级是新手。
 新手能记住抽象的规则，然后按照规则行事。
 
