--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -10,6 +10,8 @@
 概念与关联，是操作系统的基本核心，随之产生的是价值观与方法论。
 价值观决定你的选择，而方法论告诉你应该怎么做。
 
+最广阔的孤独，是成长没有伙伴，最无垠的寂寞，是有一颗成长的心却身处一个希望你共同平庸的环境里……
+
 
 ## 2017-04-03  关于创业的选择
 比如我们之前说过的写作。对于个人而言，这可能是为数不多的必然有“成长率”的事情。
