Adds reading notes

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,16 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-16  为平等而跑
+凯瑟琳·斯威策从小最大的愿望是成为啦啦队队员。
+她认为啦啦队队员是最受欢迎、最快乐的女生，但她的爸爸对她说：“人生最重要的是参与其中，而不是坐在一旁看着别人奋斗。
+
+
+## 2017-04-15  荣誉还是生命？
+泰坦尼克号的五十名高级船员，除了指挥逃生的二副莱托勒被救，其他全部殉职。泰坦尼克号于1912年4月15日凌晨2点20分沉没。
+真正的慷慨，不是大方地给别人需要的东西，而是把自己需要的，给了别人。
+
+
 ## 2017-04-14  打破“定论”更难
 故事：巴里·马歇尔发现幽门杆菌
 拿一个广口瓶，瓶底向着阳光，瓶中放入蜜蜂，它会往阳光飞去，但会撞到瓶底，一撞再撞，因为在自然界没有“透明的墙”。
