--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,36 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-19  子女教育：辛苦与痛苦
+孩子可能学得很辛苦，但是并不等于要让他很痛苦。
+逼着孩子痛苦地学习会有什么结果？你即使让孩子看似成功，他最终也成不了一流的人才。
+在几乎每一个行业中，最成功的那前5%的人，都是因为喜欢，是从兴趣出发。而从利益出发的人，只能做到前20%到前5%之间的一个水平，并不是最好。
+常说的“快乐教育”是想要避免让孩子学得很“痛苦”，而不是想让孩子不“辛苦”
+
+敢于“放纵”孩子的另一个原因是，我相信人类有向善的天性，而每一个孩子也都有好奇的天性，他们有强烈的求知欲望。
+教育的目的是激发他们的好奇心，引导他们内在的欲望，让他们自己自觉地去学习进步。
+
+
+## 2017-04-18  子女教育：怎么看名校毕业生在北京买不起学区房
+清华北大。今天，每年能够进这两所顶级大学（清华北大）的高中生，加起来不过6000人左右。
+这些人用了中国最好的高等教育资源，需要为社会做的事情应该不仅仅是谋生，而应该更多一些。
+如果从这两所大学走出来，只是获得了一份收入还不错的工作，为孩子找一个好学校，
+让孩子继续重复考试升学的老路，这就不仅是整个教育的悲哀了，还是我们家庭教育的悲哀，家长的悲哀了。
+
+大家都希望进入最好的学校。至于谁能进那些好学校，全世界通常只有三种方法，通过抽签、考试录取、分学区。
+
+
+## 2017-04-17  成功并不难，在于少犯错误
+确保自己在北京、上海这样的城市里，贡献和收入成为前1/4的人。
+北京和上海的房价再贵，也需要让它的贡献者住得起，否则没有人贡献，这个城市就会衰落，房价就会下跌。
+房价之所以撑得住，是因为有很多贡献者。因此，大家唯一要做的是，确保自己的贡献在前1/4。
+
+
+## 2017-04-16  《小山词》和《纳兰词》
+美国开国元勋之一的约翰·亚当斯讲过这样一段名言：
+“我必须学习政治和战争，这样我的孩子才有可能学习数学和哲学，以及地理、自然历史等等，然后我的孙子才有机会学习绘画、诗歌、音乐、建筑、编织女红和瓷艺”。
+
+
 ## 2017-04-10  未来商业的特点：共享经济
 共享经济的本质是让更多的资源加入到经济活动中，利用新技术提高效率，带来方便，最终让大家多花钱，只有按照这个思路从事共享经济才能成功。
 商业的本质是为了让人多花钱，而不是省钱。如果共享经济带来的结果是大家都不去买东西，那么经济一定是萎缩的，这样的生意就发展不起来了。
