--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-16  答熊逸：说精英，谁是精英
+智识，就是智慧和见识。智识不是一种资源。资源可以赠送，可以继承，可以一出生就有，智识不能。资源可以出售变现，智识不能直接换成钱。
+智识是“三观” —— 对世界正确的认识，对人生合理的安排，知道什么东西是好东西；智识还是历史的经验和做事的手段。
+
+
 ## 2017-04-15  意会工具箱里的六种武器
 社会学家尼克拉斯·卢曼（Niklas Luhmann）有个理论说，每一个专业的专业人士，看一个什么系统，都爱用一个二分法的眼光去看。
 比如说，律师看什么东西都是“合法”和“不合法”。商人看什么东西都是“盈利”和“不盈利”。记者看，那就是“有故事”和“没有故事”。
