--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,17 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-17  知识究竟是什么？
+所谓知识，指的是能够指导我们做出更好的决策，且长期来看更可能会给我们带来更好结果的那些信息。
+体系化的知识，是更高级的知识。至于碎片化什么的，跟知识完全没关系。
+有些知识，能繁衍出更多的知识，于是它们显然更高级，更有价值。
+
+我们在学校里学习的知识，确实能够让我们得到“即时反馈”。
+因为每个学期，甚至每个月都有考试，成绩如何，分数写的清清楚楚，所以当时这无形中让我们对于知识的认知出现了一定程度的偏差。
+等到毕业之后才发现，这个世界能够给你即时反馈的知识并没有想象中那么多。
+而那些真正有用并且能够改变你生活的知识，有时候反倒会让你“迟迟看不到结果”。
+
+
 ## 2017-04-10  提高成长率的方法论
 在所谓“生意”这件事儿上：成长率 > 成长 > 赚钱 > 谋生
 概念与关联，是操作系统的基本核心，随之产生的是价值观与方法论。
