--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,18 @@
 
 # 个人篇
 
+## 2017-04-13  从狭窄的5%，跨度到广阔的95%
+行为科学研究得出结论：一个人一天的行为中，大约有5%是非习惯性的，而其它的95%的行为都是源自于习惯。
+这几乎也就是说，是习惯，而不是逻辑，决定了我们的一生。
+
+欧洲工商管理学院教授特奥·康普诺利在他著名的书《慢思考》里，把人的大脑分为：反射脑，思考脑，存储脑。
+简单来说，反射脑管直觉，思考脑管理性，存储脑管记忆。
+反射脑里的直觉，依赖习惯。用习惯做出反应，快速，“省电”，但是未必总是正确；
+思考脑里的理性，依赖逻辑。用逻辑做出反应，更加正确，但是缓慢，并且“费电”
+
+养成习惯的过程很痛苦，但习惯本身，不会让人痛苦。
+
+
 ## 2017-04-12  把优秀，变成一种习惯
 你能给予什么样的价值，就会认识什么样的人。如果不能用价值浇灌人脉，那就只能用人品抵押。
 抵押到最后还不起了，你还想借，就会破产。人脉，不是那些能帮到你的人，而是那些你能帮到的人。
