Adds reading notes

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,14 @@
 
 # 个人篇
 
+## 2017-04-19  人生的不同，是由第三个8小时创造的
+时间有三重特性：交易、消费和投资。
+
+你支付给你的老板每天8小时、每月172小时，他回报给你每月1万元钱，这是交易；
+你拿你好不容易找到的2～3小时“不被打扰的时间”追韩剧、追日剧、追美剧、追抗日剧，这是消费；
+你拿这段时间来学习《刘润·5分钟商学院》，这就是投资。
+
+
 ## 2017-04-13  从狭窄的5%，跨度到广阔的95%
 行为科学研究得出结论：一个人一天的行为中，大约有5%是非习惯性的，而其它的95%的行为都是源自于习惯。
 这几乎也就是说，是习惯，而不是逻辑，决定了我们的一生。
