--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,12 +5,41 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-23  无法计算的情感
+故事：可口可乐换口味
+“有些事情，你要用心才听得到！”这是《小王子》中，狐狸对小王子说得最宝贵的话。
+
+
+## 2017-04-22  千古一瞬，天下第一
+故事：兰亭集序
+晋穆帝永和九年三月三日，公元353年4月22日，王羲之和儿子王凝之、王献之，加上文人好友共四十一人，在会稽山阴近郊的兰亭饮酒作诗。
+玩到最欢乐时，大家要求王羲之为这次聚会写一篇序文作纪念。王羲之带着一点儿醉意，顺手拿起狼毫笔，写下《兰亭集序》的三百二十四个字。
+
+王羲之酒醒后，看到自己的作品字字笔力劲健，全篇气韵流畅，有如神助。他越看越满意，便很用心地照样再写。
+他写了好几遍，可怎么努力，就是写不出原来的神韵。这部《兰亭集序》成了王羲之最得意的墨宝，也是最伟大的书法杰作。
+
+
+## 2017-04-21  爱唱歌的海豚为什么会自杀？
+故事：里克·欧贝瑞，《海豚湾》纪录片
+一只海豚本来有三十多年的寿命，但在水族馆平均只能活两年。
+
+往往，我们要先走错路，才会知道什么是对的路。
+常常，我们的眼光要放远，才知道眼前该做什么。
+
+
+## 2017-04-19  种姓制度下的罗密欧与朱丽叶
+故事：杰茜，印度宗教传统 —— “荣誉处决”
+在种姓制度下，不同阶级是不允许通婚的。当子女违背这个传统，家里的尊长可以对子女予以惩罚，最重可以杀死子女。
+杀人的长辈不但没有罪过，反而被认为是维护宗教传统而做出牺牲，是一件“荣誉”，所以被称为“荣誉处决”。
+
+
 ## 2017-04-16  为平等而跑
-凯瑟琳·斯威策从小最大的愿望是成为啦啦队队员。
+故事：凯瑟琳·斯威策从小最大的愿望是成为啦啦队队员。
 她认为啦啦队队员是最受欢迎、最快乐的女生，但她的爸爸对她说：“人生最重要的是参与其中，而不是坐在一旁看着别人奋斗。
 
 
 ## 2017-04-15  荣誉还是生命？
+故事：泰坦尼克号
 泰坦尼克号的五十名高级船员，除了指挥逃生的二副莱托勒被救，其他全部殉职。泰坦尼克号于1912年4月15日凌晨2点20分沉没。
 真正的慷慨，不是大方地给别人需要的东西，而是把自己需要的，给了别人。
 
