--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,13 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-22  小鲜肉和戏骨：橘子和苹果的对比
+在投资领域，因为一次正确的投资挣了大钱的大有人在，这并不困难，困难的是能够长期稳定地挣钱，而要做到这一点就要守纪律。
+
+人生是一条河，人的影响力是长度、宽度和深度三者的乘积。
+迈克尔·杰克逊是一条特别宽，但是比较浅，比较短的河流，而莫扎特和贝多芬则是比较窄，比较深，绵绵不绝的河流。
+
+
 ## 2017-04-19  子女教育：辛苦与痛苦
 孩子可能学得很辛苦，但是并不等于要让他很痛苦。
 逼着孩子痛苦地学习会有什么结果？你即使让孩子看似成功，他最终也成不了一流的人才。
