--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,27 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-23  非虚构类作家开更好的车
+评论：读者对机器智能误解
+不知道为什么机器人护士不能理解老人，对症下药？这个结论似乎下得太草率了。
+每个围棋局面都是个性化的，千差万别的，机器人都可以“理解”并应对；
+一个老人并不复杂的人生经历对机器人来说，看上去并不难。
+
+
+## 2017-04-21  人不是工业品，世界不能标准化
+当前我们面临的所谓的“人工智能”，根本就不是“模仿人的智能”。
+现在的人工智能，其实是统计方法、大数据、神经网络、机器学习这些东西。
+这些算法跟人的思维方式非常不同，它们仅仅是把重复的东西自动化、用把统计得出的经验做事。
+我想说一句，现在所谓的人工智能，从基本原理来说，并没有开启什么新的时代，只不过是以标准化为代表的工业时代的顶峰而已。
+
+麦兹伯格说，人，是创造意义，和解释意义的。算法永远都不会真正“在乎”这个世界到底是怎么回事儿，只有人会在乎。
+
+
+## 2017-04-18  面试根本不靠谱
+考研面试最重要的作用，是把那些来自比较差的学校，平时不注重科研训练，专门准备考研，甚至考了好多次的学生，给淘汰掉。
+这些人考试分数很高，但是教授觉得他们科研能力不行，不想要，只看分数还不能不要，面试就是最好的办法。
+
+
 ## 2017-04-16  答熊逸：说精英，谁是精英
 智识，就是智慧和见识。智识不是一种资源。资源可以赠送，可以继承，可以一出生就有，智识不能。资源可以出售变现，智识不能直接换成钱。
 智识是“三观” —— 对世界正确的认识，对人生合理的安排，知道什么东西是好东西；智识还是历史的经验和做事的手段。
