--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -16,7 +16,14 @@
     -- 《登金陵凤凰台》
 
 
+## 白居易
+孤山寺北贾亭西，水面初平云脚低。几处早莺争暖树，谁家新燕啄信泥。
+乱花渐欲迷人眼，浅草才能没马蹄。最爱湖东行不足，绿杨阴里白沙堤。
+    -- 《湖上春行》
+
+
 ## 其他
+
 游人曲岸看花发，走马平沙猎雪回。
     -- 杨巨源《和大夫边春呈长安亲故》
 > 两句，两种态度，两种人生
